2008-03-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-VAR): when the variable is a constant,
	make anode foldable
	(c-GLOBAL-FUNCTION-CALL): fold some calls (NULL/CONSP/XOR...)

2008-03-03  Sam Steingold  <sds@gnu.org>

	c-NORMAL-FUNCTION-CALL can now fold calls
	* compiler.lisp (try-constant-fold): extracted from
	c-DIRECT-FUNCTION-CALL
	(return-if-foldable): new macro, uses try-constant-fold
	(c-NORMAL-FUNCTION-CALL, c-DIRECT-FUNCTION-CALL): use it
	(function-code-list): extracted from c-GLOBAL-FUNCTION-CALL
	(c-GLOBAL-FUNCTION-CALL): use it
	(collect-arg, collect-args): add
	(c-NORMAL-FUNCTION-CALL, c-DIRECT-FUNCTION-CALL)
	(c-GLOBAL-FUNCTION-CALL): use them
	* record.d, subr.d (%UNBOUND): seclass_read, not seclass_foldable,
	because (const-value (new-const #<unbound>)) is NIL

2008-03-03  Sam Steingold  <sds@gnu.org>

	* hashtabl.d, subr.d (GETHASH): seclass_read, not seclass_default

2008-03-02  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (define-hash-table-test): use check-symbol

2008-03-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-recompile): do not specify file name in "-o",
	just the directory

2008-03-02  Sam Steingold  <sds@gnu.org>

	* .gdbinit (build-id-verbose): set to 0 to avoid fedora yum messages
	(main_actions): silent break to call check_funtab()

2008-03-01  Sam Steingold  <sds@gnu.org>

	* clos-genfun4.lisp (check-gf-lambda-list): new function
	(generic-function-argument-precedence-order, generic-function-argorder)
	(generic-function-lambda-list, generic-function-signature): use it

2008-02-29  Sam Steingold  <sds@gnu.org>

	* analyse-funtab.lisp: new file: study which functions should be
	added to eval.d:FUNTAB
	* eval.d (FUNTAB): add check_function_name, typep_class,
	defined_class_p, proper_list_p, pcompiled_function_p, make_macro,
	macrop, macro_expander, symbol_macro_p, standard_instance_access,
	set_standard_instance_access, encodingp;
	(FUNTABR): add mapcap
	* constobj.d (version): bump
